# PolyScav

./: fibonnaci.txt
defiI-PolyAI/: readme.md
defiI-PolyAI/backend/: app.py  database.py  model.py  predictions.db  requirements.txt
defiI-PolyAI/backend/models/: train_image_model.py
defiI-PolyAI/backend/models/models/: label_map.pkl
defiI-PolyAI/frontend/src/: App.jsx  index.css
defiI-PolyAI/frontend/src/components/: History.jsx  UploadCard.jsx
docs/: index.html
jeux/: README.md  main.py
opengl-objects/: CMakeLists.txt  Dockerfile  README.md  main.cpp
opengl-objects/shaders/: basic.frag  basic.vert
